--- a/composer.json
+++ b/composer.json
@@ -22,6 +22,7 @@
     "require": {
         "php": ">=8.0",
         "sikessem/organizer": "dev-main",
+        "sikessem/events": "dev-main",
         "sikessem/encapsulation": "dev-main"
     },
     "autoload": {
